--- a/django_project/blog/templates/blog/post_detail.html
+++ b/django_project/blog/templates/blog/post_detail.html
@@ -9,6 +9,8 @@
         <h1>{{ post.title|capfirst }}</h1>
         <p class="post-info">
             {% include 'blog/post_info.html' %}
+            | <span><a href="{% url 'post_update' post.id %}">Edit</a> 
+            </span>
         </p>
         <p>
             {{ post.content }}
